# modular-life

./: README.md
00-wasm-benchmark/: Cargo.toml  README.md
00-wasm-benchmark/triangle-number/: Cargo.toml
00-wasm-benchmark/triangle-number/benches/: read_benchmark.rs  write_benchmark.rs
00-wasm-benchmark/triangle-number/src/: lib.rs
00-wasm-benchmark/wasm-benchmark/: Cargo.toml
00-wasm-benchmark/wasm-benchmark/src/: main.rs
