[package]
name = "triangle-number"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "read_benchmark"
harness = false

[[bench]]
name = "write_benchmark"
harness = false
